--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,6 +15,9 @@ table {
   margin-bottom: 20px;
   border: 3px solid #000;
   border-radius: 10px;
+  width: 49%;
+  margin-right: 1%;
+  float: left;
 }
 
 // Titre de la feuille d'unité
