--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,7 +1,7 @@
 // Générique
 body {
-  font-family: "Arial";
-  font-size: 15px;
+  font-family: "Arial" !important;
+  font-size: 12px !important;
   -webkit-print-color-adjust: exact;
 }
 
@@ -15,9 +15,6 @@ table {
   margin-bottom: 20px;
   border: 3px solid #000;
   border-radius: 10px;
-  width: 49%;
-  margin-right: 1%;
-  float: left;
 }
 
 // Titre de la feuille d'unité
@@ -53,7 +50,8 @@ table {
 
   td:first-child {
     padding: 5px 10px;
-    width:33%;
+    width: 10.65%;
+    text-transform: uppercase;
   }
 }
 
@@ -81,6 +79,8 @@ table {
 
   td:first-child {
     padding: 5px 10px;
+    width: 16%;
+    text-transform: uppercase;
   }
 }
 
@@ -105,9 +105,18 @@ table {
   border-top: 1px solid #000;
   border-bottom: 1px solid #000;
 
+  td:first-child {
+    width: 16%;
+    font-weight: bold;
+    vertical-align: top;
+    padding: 10px 10px;
+    text-transform: uppercase;
+  }
+
   ul {
     list-style: none;
-    padding: 0px 10px;
+    padding: 10px 0px;
+    margin: 0px;
   }
 
   li:not(:last-child) {
@@ -121,5 +130,7 @@ table {
   td:first-child {
     font-weight: bold;
     padding: 5px 10px;
+    width: 16%;
+    text-transform: uppercase;
   }
 }
