--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,6 +17,39 @@ table {
   border-radius: 10px;
 }
 
+.icon-role {
+  height: 54px;
+  width: 60px !important;
+  position: relative;
+
+  img {
+    position: absolute;
+    top: -3px;
+    left: -3px;
+  }
+}
+
+.icon-power {
+  height: 54px;
+  width: 60px !important;
+  position: relative;
+
+  img {
+    position: absolute;
+    top: -4px;
+    left: -3px;
+  }
+
+  span {
+    color: #fff;
+    font-weight: bold;
+    font-size: 20px;
+    position: absolute;
+    top: 6px;
+    left: 22px;
+  }
+}
+
 // Titre de la feuille d'unité
 .header {
 
@@ -31,6 +64,11 @@ table {
 
   th:not(:last-child) {
     width: 10%;
+  }
+
+  .unit-title {
+    font-size: 22px;
+    font-weight: normal;
   }
 }
 
@@ -115,7 +153,7 @@ table {
 
   ul {
     list-style: none;
-    padding: 10px 0px;
+    padding: 10px 10px 10px 0;
     margin: 0px;
   }
 
