Mise en place du changement de page tous les deux éléments (1 row)

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,10 @@ body {
   -webkit-print-color-adjust: exact;
 }
 
+.row {
+  page-break-after: always;
+}
+
 table {
   width: 100%;
   border-collapse: collapse;
