--- a/sass/style.scss
+++ b/sass/style.scss
@@ -223,16 +223,18 @@ table {
 
   .tank__damage {
     position: absolute;
-    width: 250px;
+    width: 275px;
     background: white;
     border: 2px solid #000;
     border-radius: 0 0 10px 10px;
     right: -48px;
     top: -3px;
+    height: 154px;
 
     .tank__damage_caption {
-      padding: 5px 10px 0 10px;
+      padding: 2px 10px 0;
       font-size: 12px;
+      margin-bottom: 0px;
 
       span {
         font-weight: bold;
