--- a/sass/style.scss
+++ b/sass/style.scss
@@ -9,8 +9,8 @@ $contentFonts: 'albertina_mt_stdregular';
 
 @font-face {
   font-family: 'albertina_mt_stdregular';
-  src: url('fonts/albertinamtstd-regular-webfont.woff2') format('woff2'),
-  url('fonts/albertinamtstd-regular-webfont.woff') format('woff');
+  src: url('../fonts/albertinamtstd-regular-webfont.woff2') format('woff2'),
+  url('../fonts/albertinamtstd-regular-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 
@@ -18,21 +18,40 @@ $contentFonts: 'albertina_mt_stdregular';
 
 @font-face {
   font-family: 'caslon_antiqueregular';
-  src: url('fonts/caslonantique-webfont.woff2') format('woff2'),
-  url('fonts/caslonantique-webfont.woff') format('woff');
+  src: url('../fonts/caslonantique-webfont.woff2') format('woff2'),
+  url('../fonts/caslonantique-webfont.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 
 }
 
+// Mixin
+@mixin no-padding($side) {
+  @if $side == 'all' {
+    .no-padding {
+      padding: 0 !important;
+    }
+  } @else {
+    .no-padding-#{$side} {
+      padding-#{$side}: 0 !important;
+    }
+  }
+}
+
+@include no-padding("left");
+@include no-padding("right");
+@include no-padding("top");
+@include no-padding("bottom");
+@include no-padding("all");
+
 // Générique
 body {
   font-family: $contentFonts !important;
-  font-size: 14px !important;
+  font-size: 16px !important;
   -webkit-print-color-adjust: exact;
 }
 
-.row {
+.main {
   page-break-after: always;
 }
 
@@ -49,7 +68,8 @@ table {
   page-break-after: always;
   margin-bottom: 20px;
   border: 3px solid #000;
-  border-radius: 10px;
+  border-radius: 0 0 10px 10px;
+  width:100%;
 }
 
 .icon-role {
@@ -59,7 +79,7 @@ table {
 
   img {
     position: absolute;
-    top: -3px;
+    top: 2px;
     left: -3px;
   }
 }
@@ -71,16 +91,16 @@ table {
 
   img {
     position: absolute;
-    top: -4px;
+    top: 2px;
     left: -3px;
   }
 
   span {
-    color: #fff;
+    color: #fff !important;
     font-weight: bold;
     font-size: 20px;
     position: absolute;
-    top: 6px;
+    top: 21px;
     left: 22px;
   }
 }
@@ -94,7 +114,7 @@ table {
   }
 
   th {
-    padding: 10px;
+    padding: 27px 10px;
   }
 
   th:not(:last-child) {
@@ -102,9 +122,10 @@ table {
   }
 
   .unit-title {
-    font-size: 22px;
+    font-size: 30px;
     font-weight: normal;
     font-family: $titleFonts !important;
+    padding: 10px 20px;
   }
 }
 
@@ -167,9 +188,25 @@ table {
   td:first-child {
     padding: 6px 10px;
   }
+
+  td:not(:first-child) {
+    text-align: center;
+  }
+
+  td:nth-child(3) {
+    text-align: left !important;
+  }
+
+  td:last-child {
+    text-align: left !important;
+  }
+  td {
+    padding: 0 5px;
+  }
 }
 
-.weapon__content_grey {
+.weapon__content_grey,
+.name__content_grey {
   background-color: $linegrey !important;
 }
 
@@ -213,28 +250,32 @@ table {
 }
 
 // Tank
-.tank {
-  width: 95%;
+.wrapper__tank {
   position: relative;
+  margin-bottom: 20px;
 
   span {
     color: red;
   }
 
+  .tank__header {
+    margin-bottom: 10px;
+  }
+
+  .tank__name {
+    border: 3px solid #000;
+    height: 170px;
+  }
+
   .tank__damage {
-    position: absolute;
-    width: 275px;
     background: white;
-    border: 2px solid #000;
-    border-radius: 0 0 10px 10px;
-    right: -48px;
-    top: -3px;
-    height: 154px;
+    border: 3px solid #000;
+    height: 170px;
 
     .tank__damage_caption {
-      padding: 2px 10px 0;
+      padding: 2px 10px 0 10px;
       font-size: 12px;
-      margin-bottom: 0px;
+      margin-bottom: 2px;
 
       span {
         font-weight: bold;
@@ -253,6 +294,14 @@ table {
           width: 44%;
         }
       }
+
+      .weapon__content td:first-child {
+        padding: 0px 10px;
+      }
     }
+  }
+  .wrapper__tank_content {
+    border: 3px solid #000;
+    border-radius: 0 0 10px 10px;
   }
 }
