--- a/sass/style.scss
+++ b/sass/style.scss
@@ -44,6 +44,13 @@ $contentFonts: 'albertina_mt_stdregular';
 @include no-padding("bottom");
 @include no-padding("all");
 
+p {
+  text-align: center;
+  position: relative;
+  z-index: 10;
+  font-weight: bold;
+}
+
 // Générique
 body {
   font-family: $contentFonts !important;
@@ -76,32 +83,35 @@ table {
   height: 54px;
   width: 60px !important;
   position: relative;
-
-  img {
-    position: absolute;
-    top: 2px;
-    left: -3px;
-  }
 }
 
 .icon-power {
   height: 54px;
   width: 60px !important;
   position: relative;
+}
+
+.octogone {
+  background: url("../img/octogone.png") top left no-repeat;
+  width: 60px;
+  height: 60px;
+
+  p {
+    text-align: center;
+    line-height: 18px;
+    padding-top: 8px;
+
+    span {
+      font-weight: bold;
+      font-size:20px;
+      color: white !important;
+    }
+  }
 
   img {
     position: absolute;
-    top: 2px;
-    left: -3px;
-  }
-
-  span {
-    color: #fff !important;
-    font-weight: bold;
-    font-size: 20px;
-    position: absolute;
-    top: 21px;
-    left: 22px;
+    top: 14px;
+    left: 19px;
   }
 }
 
@@ -114,7 +124,7 @@ table {
   }
 
   th {
-    padding: 27px 10px;
+    padding: 0px 10px;
   }
 
   th:not(:last-child) {
@@ -259,7 +269,7 @@ table {
   }
 
   .tank__header {
-    margin-bottom: 10px;
+    margin-bottom: 15px;
   }
 
   .tank__name {
@@ -276,6 +286,7 @@ table {
       padding: 2px 10px 0 10px;
       font-size: 12px;
       margin-bottom: 2px;
+      text-align: left;
 
       span {
         font-weight: bold;
