--- a/template/ig-and-ik-1000_res.html
+++ b/template/ig-and-ik-1000_res.html
@@ -6,7 +6,7 @@
 
     <title>Test de la fonction apply-templates</title>
 
-    <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="../css/style.css"/>
 
     <!-- CDN bootstrap -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css"
@@ -24,9 +24,17 @@
                 <table class="header">
                     <thead class="header__title">
                     <tr>
-                        <th class="icon-role"><img src="img/HQ.png" width="60" height="60" alt="QG"/></th>
-                        <th class="icon-power"><img src="img/power.png" width="60" height="60"
-                                                    alt="7 PL"/><span>7</span></th>
+                        <th class="icon-role">
+                          <div class="octogone">
+                            <img src="../img/hq.png" width="43" height="36" alt="QG" />
+                          </div>
+                        </th>
+                        <th class="icon-power">
+                          <div class="octogone">
+                            <p><span>20</span><br />power</p>
+                          </div>
+                        </th>
+
                         <th class="unit-title">Commissar Yarrick</th>
                     </tr>
                     </thead>
@@ -160,10 +168,19 @@
                 <table class="header">
                     <thead class="header__title">
                     <tr>
-                        <th class="icon-role"><img src="img/HQ.png" width="60" height="60" alt="QG"/></th>
-                        <th class="icon-power"><img src="img/power.png" width="60" height="60"
-                                                    alt="3 PL"/><span>3</span></th>
-                        <th class="unit-title">Tempestor Prime</th>
+                      <th class="icon-role">
+                        <div class="octogone">
+                          <img src="../img/hq.png" width="43" height="36" alt="QG" />
+                        </div>
+                      </th>
+                      <th class="icon-power">
+                        <div class="octogone">
+                          <p><span>3</span><br />power</p>
+                        </div>
+                      </th>
+                      <th class="unit-title">
+                        Tempestor Prime
+                      </th>
                     </tr>
                     </thead>
                 </table>
@@ -283,9 +300,16 @@
                 <table class="header">
                     <thead class="header__title">
                     <tr>
-                        <th class="icon-role"><img src="img/Troops.png" width="60" height="60" alt="QG"/></th>
-                        <th class="icon-power"><img src="img/power.png" width="60" height="60"
-                                                    alt="3 PL"/><span>3</span></th>
+                      <th class="icon-role">
+                        <div class="octogone">
+                          <img src="../img/Troops.png" width="43" height="36" alt="QG" />
+                        </div>
+                      </th>
+                      <th class="icon-power">
+                        <div class="octogone">
+                          <p><span>3</span><br />power</p>
+                        </div>
+                      </th>
                         <th class="unit-title">Conscripts</th>
                     </tr>
                     </thead>
@@ -384,10 +408,15 @@
                     <table class="header">
                         <thead class="header__title">
                         <tr>
-                            <th class="icon-role"><img src="img/Heavy-Support.png" width="60" height="60"
-                                                       alt="Heavy Support">
+                            <th class="icon-role">
+                              <div class="octogone">
+                                <img src="../img/Heavy-Support.png" width="43" height="36" alt="QG" />
+                              </div>
                             </th>
-                            <th class="icon-power"><span>20</span>
+                            <th class="icon-power">
+                              <div class="octogone">
+                                <p><span>20</span><br />power</p>
+                              </div>
                             </th>
                             <th class="unit-title">Leman Russ Battle Tanks</th>
                         </tr>
@@ -606,8 +635,16 @@
             <table class="header">
                 <thead class="header__title">
                 <tr>
-                    <th class="icon-role"><img src="img/Heavy-Support.png" width="60" height="60" alt="Heavy Support"></th>
-                    <th class="icon-power"><img src="img/power.png" width="60" height="60" alt="11 "><span>11 </span></th>
+                  <th class="icon-role">
+                    <div class="octogone">
+                      <img src="../img/Heavy-Support.png" width="43" height="36" alt="QG" />
+                    </div>
+                  </th>
+                  <th class="icon-power">
+                    <div class="octogone">
+                      <p><span>11</span><br />power</p>
+                    </div>
+                  </th>
                     <th class="unit-title">Exocrine</th>
                 </tr>
                 </thead>
