Correction de l'HTML

--- a/template/ig-and-ik-1000_res.html
+++ b/template/ig-and-ik-1000_res.html
@@ -674,7 +674,8 @@
                     <td>6</td>
                     <td>3+</td>
                 </tr>
-                </tbody></table>
+                </tbody>
+            </table>
             <div class="tank__damage">
                 <p class="tank__damage_caption"><span>DAMAGE</span><br>
                     Some of this model's characteristics change as it suffer damage, as shown below:
@@ -705,7 +706,8 @@
                         <td>5+</td>
                         <td>1</td>
                     </tr>
-                    </tbody></table>
+                    </tbody>
+                </table>
             </div>
             <table class="weapon">
                 <tbody><tr class="weapon__head">
@@ -735,7 +737,8 @@
                     <td>2</td>
                     <td>-</td>
                 </tr>
-                </tbody></table>
+                </tbody>
+            </table>
             <table class="content">
                 <tbody><tr>
                     <td>ABILITIES&nbsp;&nbsp;&nbsp;&nbsp;</td>
@@ -756,14 +759,17 @@
                         </ul>
                     </td>
                 </tr>
-                </tbody></table>
+                </tbody>
+            </table>
             <table class="footer">
                 <tbody><tr>
                     <td colspan="1">KEYWORDS</td>
                     <td colspan="8">Faction: &lt;Hive Fleet&gt;, Faction: Tyranids, Heavy Support, Monster</td>
                 </tr>
-                </tbody></table>
+                </tbody>
+            </table>
         </div>
         </div>
+    </div>
 </body>
 </html>
