Suppression de l'exocrine

--- a/template/ig-and-ik-1000_res.html
+++ b/template/ig-and-ik-1000_res.html
@@ -435,7 +435,7 @@
                             <td>Ld</td>
                             <td>Save</td>
                         </tr>
-                        <tr class="weapon__content">
+                        <tr class="name__content">
                             <td>Leman Russ</td>
                             <td><span>*</span></td>
                             <td>6+</td>
@@ -629,147 +629,7 @@
               </div>
           </div>
         </div>
-        <!-- Exocrine -->
-        <div class="row main">
-            <div class="wrapper tank">
-            <table class="header">
-                <thead class="header__title">
-                <tr>
-                  <th class="icon-role">
-                    <div class="octogone">
-                      <img src="../img/Heavy-Support.png" width="43" height="36" alt="QG" />
-                    </div>
-                  </th>
-                  <th class="icon-power">
-                    <div class="octogone">
-                      <p><span>11</span><br />power</p>
-                    </div>
-                  </th>
-                    <th class="unit-title">Exocrine</th>
-                </tr>
-                </thead>
-            </table>
-            <table class="name">
-                <tbody><tr class="name__head">
-                    <td>Unit</td>
-                    <td>M</td>
-                    <td>WS</td>
-                    <td>BS</td>
-                    <td>S</td>
-                    <td>T</td>
-                    <td>W</td>
-                    <td>A</td>
-                    <td>Ld</td>
-                    <td>Save</td>
-                </tr>
-                <tr class="weapon__content">
-                    <td>Exocrine</td>
-                    <td>6"</td>
-                    <td>*</td>
-                    <td>*</td>
-                    <td>7</td>
-                    <td>8</td>
-                    <td>12</td>
-                    <td>*</td>
-                    <td>6</td>
-                    <td>3+</td>
-                </tr>
-                </tbody>
-            </table>
-            <div class="tank__damage">
-                <p class="tank__damage_caption"><span>DAMAGE</span><br>
-                    Some of this model's characteristics change as it suffer damage, as shown below:
 
-                </p>
-                <table class="tank__damage_table">
-                    <tbody><tr>
-                        <td>Remaining W</td>
-                        <td>WS</td>
-                        <td>BS</td>
-                        <td>Attacks</td>
-                    </tr>
-                    <tr class="weapon__content">
-                        <td>7-12+</td>
-                        <td>4+</td>
-                        <td>4+</td>
-                        <td>3</td>
-                    </tr>
-                    <tr class="weapon__content weapon__content_grey">
-                        <td>4-6</td>
-                        <td>4+</td>
-                        <td>5+</td>
-                        <td>D3</td>
-                    </tr>
-                    <tr class="weapon__content">
-                        <td>1-3</td>
-                        <td>5+</td>
-                        <td>5+</td>
-                        <td>1</td>
-                    </tr>
-                    </tbody>
-                </table>
-            </div>
-            <table class="weapon">
-                <tbody><tr class="weapon__head">
-                    <td>Weapon</td>
-                    <td>Range</td>
-                    <td>Type</td>
-                    <td>S</td>
-                    <td>AP</td>
-                    <td>D</td>
-                    <td>Abilities</td>
-                </tr>
-                <tr class="weapon__content">
-                    <td>Bio-plasmic Cannon</td>
-                    <td>36"</td>
-                    <td>Heavy 6</td>
-                    <td>7</td>
-                    <td>-3</td>
-                    <td>2</td>
-                    <td>-</td>
-                </tr>
-                <tr class="weapon__content weapon__content_grey">
-                    <td>Powerful Limbs</td>
-                    <td>Melee</td>
-                    <td>Melee</td>
-                    <td>User</td>
-                    <td>-1</td>
-                    <td>2</td>
-                    <td>-</td>
-                </tr>
-                </tbody>
-            </table>
-            <table class="content">
-                <tbody><tr>
-                    <td>ABILITIES&nbsp;&nbsp;&nbsp;&nbsp;</td>
-                    <td>
-                        <ul>
-                            <li><b>Death Throes : </b>If this model is reduced to 0 wounds, roll a dice before removing it from the battlefield; on a 6, it lashes out in its death
-                                throes, and each unit within 3" suffers D3 mortal wounds.
-                            </li>
-                            <li><b>Instinctive Behaviour : </b>Unless a &lt;HIVE FLEET&gt; unit with this ability is within 24" of any friendly &lt;HIVE FLEET&gt; Synapse unit, you must subtract 1
-                                from any hit rolls made for it when shooting any target other than the nearest visible enemy unit, and you must subtract 2
-                                from its charge roll if it declares a charge against any unit other than the nearest enemy unit.
-                            </li>
-                            <li><b>Symbiotic Targeting : </b>If this model did not move in its Movement phase, you can add 1 to its hit rolls in the following Shooting phase. If you do
-                                so, it cannot charge in the same turn.
-                            </li>
-                            <li><b>Weapon Beast : </b>If this model does not move in your Movement phase, it can shoot all of its weapons twice in your Shooting phase.
-                            </li>
-                        </ul>
-                    </td>
-                </tr>
-                </tbody>
-            </table>
-            <table class="footer">
-                <tbody><tr>
-                    <td colspan="1">KEYWORDS</td>
-                    <td colspan="8">Faction: &lt;Hive Fleet&gt;, Faction: Tyranids, Heavy Support, Monster</td>
-                </tr>
-                </tbody>
-            </table>
-        </div>
-        </div>
     </div>
 </body>
 </html>
