--- a/template/partials/_psyker.html
+++ b/template/partials/_psyker.html
@@ -1,10 +1,10 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<table class="psyker">
+    <tbody>
+    <tr>
+        <td colspan="1">PSYKER</td>
+        <td colspan="8">Cast : <b>1</b> / Deny :
+            <b>1</b> / Power Known :
+            <b>Smite + 1 Hive Mind</b></td>
+    </tr>
+    </tbody>
+</table>
