--- a/template/partials/_footer.html
+++ b/template/partials/_footer.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<table class="footer">
+    <tr>
+        <td colspan="1">KEYWORDS</td>
+        <td colspan="8">(REGIMENT), Astra Militarum, Heavy
+            Support, Imperium, Leman Russ, Leman Russ Battle Tank,
+            Vehicle
+        </td>
+    </tr>
+</table>
