--- a/template/partials/_header.html
+++ b/template/partials/_header.html
@@ -1,10 +1,18 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
-</head>
-<body>
-$END$
-</body>
-</html>
+<table class="header">
+    <thead class="header__title">
+        <tr>
+            <th class="icon-role">
+                <div class="octogone">
+                    <img src="../../img/HQ.png" width="43" height="36" alt="HQ" />
+                </div>
+            </th>
+            <th class="icon-power">
+                <div class="octogone">
+                    <p><span>20</span><br />power</p>
+                </div>
+            </th>
+
+            <th class="unit-title">Commissar Yarrick</th>
+        </tr>
+    </thead>
+</table>
