correction de l'affichage pour valider les tanks qui ont deux éléments pilote et char

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -290,7 +290,11 @@ table {
 
   .tank__name {
     border: 3px solid #000;
-    height: 170px;
+    height: 174px;
+
+    .name__head td:first-child {
+      width: auto;
+    }
   }
 
   .tank__damage {
