--- a/template/gabarit-avec-profil-degressif.html
+++ b/template/gabarit-avec-profil-degressif.html
@@ -19,7 +19,7 @@
     <div class="container-fluid">
         <!-- Unité avec profil dégressif : exemple avec un Leman Russ -->
         <div class="row main">
-            <div class="wrapper__tank">
+            <div class="wrapper__tank container-fluid">
                 <!-- Start : _header-tank.html -->
                 <div class="row tank__header">
                     <div class="col-9">
